--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -149,17 +149,14 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
             android:id="@+id/tvName"
             android:layout_centerHorizontal="true"
             android:layout_alignBottom="@+id/linearLayout4"
-            android:textSize="20dp"
-            android:gravity="center_horizontal" />
+            android:textSize="20dp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
             android:id="@+id/tvEmail"
             android:layout_centerHorizontal="true"
             android:layout_alignBottom="@+id/linearLayout4"
@@ -168,7 +165,6 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="New Text"
             android:id="@+id/tvPhone"
             android:layout_centerHorizontal="true"
             android:layout_alignBottom="@+id/linearLayout4"
