--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -150,25 +150,19 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvName"
-            android:layout_centerHorizontal="true"
-            android:layout_alignBottom="@+id/linearLayout4"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvEmail"
-            android:layout_centerHorizontal="true"
-            android:layout_alignBottom="@+id/linearLayout4"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tvPhone"
-            android:layout_centerHorizontal="true"
-            android:layout_alignBottom="@+id/linearLayout4"
-            android:textSize="20dp" />
+            android:textSize="20sp" />
 
     </LinearLayout>
 
